	exmpp_xml.hrl.

	* c_src/xmpp_nss.h.in, c_src/xmpp_nss.h.js, c_src/xmpp_nss.h.awk,
	c_src/Makefile.am, c_src/Makefile.win32, c_src/Makefile.unix,
	c_src/exmpp_xml_expat.c: Rename xmpp_ns.* to xmpp_nss.* for
	consistency's sake.

	* include/exmpp_xmpp.hrl: Improve guard macros. Now they can be used
	in 'if' statements as well.

2008-08-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Exmpp is not installed under $prefix/lib/exmpp-X.X.X
	but under $prefix/exmpp-X.X.X.

	* examples, src/Makefile.am, src/Emakefile.in,
	doc/Makefile.am, ebin/Makefile.am, Makefile.am, configure.ac: Move
	examples to a dedicated directory. They may be disabled at configure
	time.

	* src/Makefile.am, examples/Makefile.am: Add +B arguments to erl(1).
	With this, Ctrl+C will halt the emulator immediatly.

	* include/xmpp.hrl, include/Makefile.am: xmpp.hrl is unused.

	* src/core/exmpp_xml.erl (get_attribute_from_list, get_attribute):
	Function to get an attribute value now take an additional argument.
	This new argument is returned by the functions if the specified
	attribute isn't found. Before, those functions would always return an
	empty string.

	* src/compat/xml.erl, src/server/exmpp_server_sasl.erl,
	src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl,
	src/network/exmpp_session.erl: Update to use the new
	get_attribute_from_list and get_attribute functions from exmpp_xml.

2008-08-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl: Add functions to set both the sender and
	the recipient at the same time.

	* c_src/make-specs-list: Historical XEPs are accepted; some are still
	used in Ejabberd for instance.

	* include/exmpp.hrl: The list of namespaces is now complete. A string
	version is added for each namespace too; this avoids calls to
	atom_to_list. Fix NS_ROSTER_EXCHANGE duplicated definitions.

	* c_src/xmpp_ns.h.in, c_src/xmpp_names.h.in, c_src/xmpp_attrs.h.in: