@@ -39,6 +39,9 @@
 	* include/exmpp_xmpp.hrl: Improve guard macros. Now they can be used
 	in 'if' statements as well.
 
+	* src/core/exmpp_message.erl, src/core/exmpp_presence.erl,
+	src/core/exmpp_iq.erl: Add guards to many functions.
+
 2008-08-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* configure.ac: Exmpp is not installed under $prefix/lib/exmpp-X.X.X
